--- a/app/views/shared/email/_feedback.html.erb
+++ b/app/views/shared/email/_feedback.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td style="padding: 15px 0 30px 60px;" align='center'>
-    <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;width:200px">Help us help you! We would love to hear your questions, comments or ideas</h4>
+    <h4 style="font-size: 13px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;width:200px">Help us help you! We would love to hear your questions, comments or ideas</h4>
   </td>
   <td style="padding: 10px 60px 30px 20px;">
     <ul style="list-style: none; padding-top: 10px; margin-top: 5px;">
