--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -1,6 +1,6 @@
 <tr>
-  <td style="padding: 30px 0 30px 60px;" colspan="2">
-    <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">
+  <td style="padding: 30px 60px 30px 60px;" colspan="2">
+    <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; font-size: 1.8em;">
       <%= @pre  %>
     </h1>
   </td>
@@ -12,11 +12,11 @@
       <img src="<%= @limg %>" width="200px" style="max-width:200px;"/>
     </a>
   </td>
-  <td style="padding: 10px 60px 0 20px;" >
+  <td style="padding: 10px 60px 0 20px; font-family: Helvetica,Arial,sans-serif;" >
     <%= @head.html_safe %>
     <%= @body.html_safe ? truncate(@body, :length => 500).html_safe : truncate(@body, :length => 500) %>
     <ul style="list-style: none; padding-top: 10px; margin-top: 5px;">
-      <% @button_info.each do |info| %> 
+      <% @button_info.each do |info| %>
         <li style='margin-bottom: 8px; margin-left: 0px; width: 170px;'>
           <a href="<%= info[:linkto] %>" align="center" bgcolor="#ff0000" style="background: #ff0000; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; width: auto;">
             <%= info[:text] %>
